# ampullarymodel

./: .gitignore  LICENSE  Makefile  README.md  build_resources.py  pyproject.toml  requirements.txt  setup.py
ampullary_ui/: ampullary_app.py  app.py  gui.ui  info.py  main.py  resources.qrc  resources_rc.py  signals.py  style.qss  utils.py
ampullary_ui/analysis/: __init__.py  analysis.py  baseline.py  utils.py  whitenoise.py
ampullary_ui/computations/: controller_functions.py  lif_simulation.py  saving_helper.py  stimulus_helper.py  table_conversion_gui.py
ampullary_ui/config/: labels.json
ampullary_ui/controllers/: cancelconformdialog.py  customcombienationwidget.py  freetypingdoublespinbox.py  main_controller.py  populationsimulator.py  simulator.py  tool_a_controller.py  tool_a_extantion.py  tool_b_controller.py  tool_b_extantion.py  tool_c_controller.py  tool_d_controller.py  ui_loding_helper.py
ampullary_ui/dialogs/: __init__.py  about.py  help.py  modelsettingsdlg.py
ampullary_ui/general_helpers/: common_variables.json
ampullary_ui/gui/: __init__.py  customcombienationwidget.py  mainwindow.py  modelcatalog.py  modelcatalogexplicit.py  modelgenerator.py  modelsettings.py  populaitiongenerator.py  populationsimulator.py  simulator.py  splashpage.py  startpage.py
ampullary_ui/plotting/: plot_cell.py  plot_distro.py
ampullary_ui/simulation/: controller_functions.py  helper.py  lif_simulation.py  table_conversion_gui.py
ampullary_ui/simulation_analysis/: analyse_sim_data.py  analysis_helpers.py  convert_data.py  summary_statistics.py
ampullary_ui/ui/: __init__.py  mainwindow.ui  manage_model.ui  model_creator.ui  modelcatalog.ui  modelcatalogexplicit.ui  modelgenerator.ui  populationgenerator.ui  populationsimulator.ui  simulator.ui  simulatortab.ui  splash.ui  startpage.ui
ampullary_ui/utils/: __init__.py  saving.py  saving_helper.py  stimulus.py
code/: ampullary_app.py  resources_rc.py
code/computations/: controller_functions.py  stimulus_helper.py  table_conversion_gui.py
code/controllers/: aspectratiofigurecanvas.py  keepratiopixmaplabel.py  tool_a_controller.py  tool_b_controller.py  tool_c_controller.py
code/general_helpers/: common_variables.json  labels.json  new_order.json
code/plotting/: plot_cell.py  plot_distro.py  plot_helpers_general.py
code/simulation_analysis/: analyse_sim_data.py  analysis_helpers.py  convert_data.py
docs/: index.md  license.md  modelcatalog.md  modelgenerator.md  packagestructure.md  simulator.md
examples/: example_features.csv  example_parameters.csv  short_example_parameters.csv
stimuli/: simstimrep_gwn150Hz10s0.3.npy
(+1 files in other folders)
