[project]
name = "ampullary_ui"
version = "2020.0.0"
description = "Run simulations and create "
authors = [{name="Sarah Mayer", email = "sa.mayer@uni-tuebingen.de"},
           {name="Jan Grewe", email= "jan.grewe@uni-tuebingen.de"}
          ]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
  "pyside6"
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  ]
keywords = ["science", "neuroscience", "simulation",
            "LIF", "sensory afferents", "electroreception"]

[tool.setuptools]
packages = ["ampullary_ui"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.gui-scripts]
ampullary-gui = "ampullary_ui:ampullary_app:main"